--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20.11.4",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
+    "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   }
 }
